diamond-price dynamially 31-12-25
