# src/common/model/20251230100737_add_diamonds.js
@@ -1,0 +1,22 @@
+/**
+ * @param { import("knex").Knex } knex
+ * @returns { Promise<void> }
+ */
+exports.up = function (knex) {
+  return knex.schema.createTable('diamonds', (table) => {
+    table.increments('id').primary()
+    table.string('diamondWeight').nullable()
+    table.string('diamondPrice').nullable()
+    table.string('diamondProfit').nullable()
+    table.timestamp('createdAt').defaultTo(knex.fn.now())
+    table.timestamp('updatedAt').defaultTo(knex.fn.now())
+  })
+};
+
+/**
+ * @param { import("knex").Knex } knex
+ * @returns { Promise<void> }
+ */
+exports.down = function (knex) {
+   return knex.schema.dropTable('diamonds')
+};
