# swagger-docs/admin-swagger/swagger.yml
@@ -5885,6 +5885,20 @@ paths:
                   askPrice:
                     type: integer
                     example: 100
+                  diamondPrices:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        weight:
+                          type: string
+                          example: "0001 to 1.20 "
+                        amount:
+                          type: string
+                          example: "12550"  
+                  diamondProfit:
+                    type: string
+                    example: "20"      
         responses:
           '200':
             description: Setting added successfully
